5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1594_2425.log
== TEST (2019-04-02 00:50:59) 
-- CODE:
d = float(input("distancia:"))
g = float(input("combustivel gasto:"))

cm = d/g

print(round(cm, 3)"km/l")
-- ERROR:
File "XXXX", line 6
    print(round(cm, 3)"km/l")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:51:46) 
-- CODE:
d = float(input("distancia:"))
g = float(input("combustivel gasto:"))

cm = d/g

print(round(cm, 3 "km/l"))
-- ERROR:
File "XXXX", line 6
    print(round(cm, 3 "km/l"))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:52:48) 
-- CODE:
d = float(input("distancia:"))
g = float(input("combustivel gasto:"))

cm = d/g

print(round(cm, 3 ("km/l")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(cm, 3 ("km/l")))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:53:56) 
-- CODE:
d = float(input("distancia:"))
g = float(input("combustivel gasto:"))

cm = d/g

print(round(cm, 3)
-- ERROR:
File "XXXX", line 7
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:54:14) 
-- CODE:
d = float(input("distancia:"))
g = float(input("combustivel gasto:"))

cm = d/g

print(round(cm, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:59:37) 
-- CODE:
d = float(input("distancia:"))
g = float(input("combustivel gasto:"))

cm = d/g

print(round(cm, 3 "km/l"))
-- ERROR:
File "XXXX", line 6
    print(round(cm, 3 "km/l"))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:00:23) 
-- CODE:
d = float(input("distancia:"))
g = float(input("combustivel gasto:"))

cm = d/g

print(round(cm, 3("km/l")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(cm, 3("km/l")))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:00:52) 
-- CODE:
d = float(input("distancia:"))
g = float(input("combustivel gasto:"))

cm = d/g

print(round(cm, 3 ("km/l")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(cm, 3 ("km/l")))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:01:47) 
-- CODE:
d = float(input("distancia:"))
g = float(input("combustivel gasto:"))

cm = d/g

print(round(cm, 3)("km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(cm, 3)("km/l"))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:02:05) 
-- CODE:
d = float(input("distancia:"))
g = float(input("combustivel gasto:"))

cm = d/g

print(round(cm, 3)"km/l")
-- ERROR:
File "XXXX", line 6
    print(round(cm, 3)"km/l")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:04:22) 
-- CODE:
d = float(input("distancia:"))
g = float(input("combustivel gasto:"))

cm = d/g
x = round(cm, 3)
print( x "km/l")
-- ERROR:
File "XXXX", line 6
    print( x "km/l")
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:04:51) 
-- CODE:
d = float(input("distancia:"))
g = float(input("combustivel gasto:"))

cm = d/g
x = round(cm, 3)
print(x, "km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:05:31) 
-- CODE:
d = float(input("distancia:"))
g = float(input("combustivel gasto:"))

cm = d/g

print(round(cm, 3, "km/l")
-- ERROR:
File "XXXX", line 7
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:05:45) 
-- CODE:
d = float(input("distancia:"))
g = float(input("combustivel gasto:"))

cm = d/g

print(round(cm, 3, "km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(cm, 3, "km/l"))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:06:38) 
-- CODE:
d = float(input("distancia:"))
g = float(input("combustivel gasto:"))

cm = d/g
x = round(cm, 3)

print(x, "km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 01:06:53) 
-- CODE:
d = float(input("distancia:"))
g = float(input("combustivel gasto:"))

cm = d/g
x = round(cm, 3)

print(x, "km/l")
-- EXECUTION TIME:
0.172309
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
